@@ -366,19 +366,33 @@ final class MemoryUsageSupport implements NotificationListener, ServiceListener
             buf.append(",'type':'").append(pool.getType()).append('\'');
 
             MemoryUsage usage = pool.getUsage();
-            usedTotal += formatNumber(buf, "used", usage.getUsed());
-            initTotal += formatNumber(buf, "init", usage.getInit());
-            committedTotal += formatNumber(buf, "committed", usage.getCommitted());
-            maxTotal += formatNumber(buf, "max", usage.getMax());
+            final long used = usage.getUsed();
+            formatNumber(buf, "used", used);
+            if ( used > -1 )
+            {
+                usedTotal += used;
+            }
+            final long init = usage.getInit();
+            formatNumber(buf, "init", init);
+            if ( init > - 1 )
+            {
+                initTotal +=  init;
+            }
+            final long committed = usage.getCommitted();
+            formatNumber(buf, "committed", committed);
+            committedTotal += committed;
+            final long max = usage.getMax();
+            formatNumber(buf, "max", usage.getMax());
 
             final long score;
-            if ( usage.getMax() == -1 )
+            if ( max == -1 || used == -1 )
             {
                 score = 100;
             }
             else
             {
-                score = 100L * usage.getUsed() / usage.getMax();
+                maxTotal += max;
+                score = 100L * used / max;
             }
             buf.append(",'score':'").append(score).append("%'");
 
@@ -402,7 +416,7 @@ final class MemoryUsageSupport implements NotificationListener, ServiceListener
         return buf.toString();
     }
 
-    long formatNumber(final StringBuilder buf, final String title, final long value)
+    void formatNumber(final StringBuilder buf, final String title, final long value)
     {
 
         final BigDecimal KB = new BigDecimal(1000L);
@@ -426,13 +440,25 @@ final class MemoryUsageSupport implements NotificationListener, ServiceListener
             bd = bd.divide(KB);
             suffix = "kB";
         }
-        else
+        else if (value >= 0 )
         {
             suffix = "B";
         }
-        bd = bd.setScale(2, RoundingMode.UP);
-        buf.append(",'").append(title).append("':'").append(bd).append(suffix).append('\'');
-        return value;
+        else
+        {
+            suffix = null;
+        }
+        buf.append(",'").append(title).append("':'");
+        if ( suffix == null )
+        {
+            buf.append("unknown");
+        }
+        else
+        {
+            bd = bd.setScale(2, RoundingMode.UP);
+            buf.append(bd).append(suffix);
+        }
+        buf.append('\'');
     }
 
     final String getDefaultDumpLocation()
